# quasistatic_simulator

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  focal.dockerfile  iiwa_block_stacking_mbp.py  log_comparison.py  meshcat_camera_utils.py  miqp.py  plot_3link_arm.py  plot_left_finger_position_from_logs.py  plot_time_step_comparisons.py  plotting.py  problem_definition_graze.py  problem_definition_pinch.py  pyproject.toml  quasistatic_sim.py  quasistatic_simulator.py  readme.md  requirements.txt  run_3link_robot.py  run_3link_robot_3d.py  run_3link_robot_drake.py  run_3link_robot_mbp.py  run_anitetesu.py  run_grazing.py  run_gripper_ball.py  run_hybrid_collision.py  run_hybrid_pushing.py  run_iiwa.py  run_iiwa_block_pushing.py  run_iiwa_blocks_pushing.py  run_iiwa_blocks_stacking.py  run_iiwa_controller_static_load.py  run_iiwa_controller_static_load_test.py  run_iiwa_spheres_bin.py  (+5 more)
.github/actions/: action.yml
.github/workflows/: build_push_prune.yml  ci.yml  delete_pr_image_on_merge.yml
core/: quasistatic_simulator.py  quasistatic_system.py  utils.py
examples/: log_comparison.py  model_paths.py  setup_environments.py  setup_simulation_diagram.py  setup_simulations.py
examples/allegro_hand/: allegro_hand_sliders.ipynb  run_allegro_hand.py
examples/box_ball_graze_2d/: run_grazing.py  run_grazing_old.py  test_box_ball_graze_2d.py  test_old_vs_new.py  visualize_piecewise_dynamics.py  visualize_piecewise_dynamics_new.py  visualize_piecewise_dynamics_old.py
examples/box_pivoting/: run_box_pivoting.py
examples/box_pushing/: run_box_pushing.py
examples/carrots/: run_carrots.py
examples/gripper_ball_pinch_2d/: plot_left_finger_position_from_logs.py  plotting.py  run_quasistatic_sim.py
examples/iiwa_bimanual/: iiwa_geometry_viz.ipynb  iiwa_sliders.ipynb  run_iiwa_bimanual.py
examples/iiwa_block_stacking/: iiwa_block_stacking_mbp.py  iiwa_block_stacking_quasistatic_sys.py  inverse_kinematics.py  plot_time_step_comparisons.py  run_iiwa_block_stacking_quasistatic_sys.py  run_iiwa_blocks_stacking.py  run_iiwa_blocks_stacking_mbp.py  (+4 more)
models/: allegro_hand.yml  allegro_hand_book.yml  allegro_hand_description_right_spheres.sdf  allegro_hand_description_right_spheres_floating.sdf  allegro_hand_door.yml  allegro_hand_floating.sdf  allegro_hand_floating_door.yml  allegro_hand_floating_palm_down.sdf  allegro_hand_floating_palm_up.sdf  allegro_hand_pen.yml  allegro_hand_plate.yml  allegro_hand_tilted.yml  ball_and_platform.yml  ball_hand.sdf  book.sdf  box.sdf  box_0.06m.sdf  box_0.07m.sdf  box_0.08m.sdf  box_0.3m_rotation.sdf  box_0.4m_rotation.sdf  box_0.5m.sdf  box_0.5m_rotation.sdf  box_0.6m.sdf  box_15cm.sdf  box_15cm_xy_rotation.sdf  box_1m.sdf  box_1m_rotation.sdf  box_1m_rotation_damped.sdf  box_30_40_40cm.sdf  box_ball_graze_2d.yml  box_for_maze_xy_rotation.sdf  box_intel_nuc.sdf  box_intel_nuc_high_mu.sdf  box_intel_nuc_hydro.sdf  box_pivoting.yml  box_pushing.yml  box_pushing_maze0.yml  box_to_flip.sdf  box_to_push.sdf  (+96 more)
q_sim_old/: problem_definition_pinch.py  simulator.py
qsim/: __init__.py  contact_results_logger.py  mbp_builder.py  meshcat_visualizer_old.py  model_paths.py  normalization_derivatives.py  parser.py  quasistatic_visualizer.py  sim_parameters.py  simulator.py  system.py  test_normalization_derivatives.py  utils.py  visualizer.py
qsim_old/: meshcat_camera_utils.py  problem_definition_graze.py  problem_definition_pinch.py  simulator.py
quasistatic_simulation/: environment_setup.py  quasistatic_simulator.py  quasistatic_system.py  setup_simulation_diagram.py  utils.py
quasistatic_simulator_cpp/: .clang-tidy  CMakeLists.txt
quasistatic_simulator_cpp/bindings/: CMakeLists.txt  qsim_cpp.cc
quasistatic_simulator_cpp/diffcp/: CMakeLists.txt  log_barrier_solver.cc  log_barrier_solver.h  qp_derivatives.cc  qp_derivatives.h  socp_derivatives.cc  socp_derivatives.h  solver_selector.cc  solver_selector.h
quasistatic_simulator_cpp/qsim/: CMakeLists.txt  batch_quasistatic_simulator.cc  batch_quasistatic_simulator.h  contact_jacobian_calculator.cc  contact_jacobian_calculator.h  finite_differencing_gradient.cc  finite_differencing_gradient.h  get_model_paths.cc  get_model_paths.h  quasistatic_parser.cc  quasistatic_parser.h  quasistatic_sim_params.h  quasistatic_simulator.cc  quasistatic_simulator.h
quasistatic_simulator_cpp/src/: CMakeLists.txt  batch_quasistatic_simulator.cc  batch_quasistatic_simulator.h  contact_jacobian_calculator.cc  contact_jacobian_calculator.h  finite_differencing_gradient.cc  finite_differencing_gradient.h  get_model_paths.cc  get_model_paths.h  log_barrier_solver.cc  log_barrier_solver.h  qp_derivatives.cc  qp_derivatives.h  qsim_cpp.cc  quasistatic_parser.cc  quasistatic_parser.h  quasistatic_sim_params.h  quasistatic_simulator.cc  quasistatic_simulator.h  run_3link_arm_3d.cc  run_planar_hand_ball.cc  socp_derivatives.cc  test_batch_simulator.cc  test_contact_forces.cc  test_log_barrier_solver.cc  test_quasistatic_sim.cc  test_quasistatic_sim_gradients.cc  test_utilites.cc  test_utilities.h
quasistatic_simulator_cpp/src/examples/: CMakeLists.txt  run_compute_signed_distance_pair.cc  run_iiwa_box_stacking.cc  run_two_spheres_yz.cc
quasistatic_simulator_cpp/src/tests/: CMakeLists.txt  test_batch_simulator.cc
quasistatic_simulator_cpp/tests/: CMakeLists.txt  contact_forces_test.cc  log_barrier_solver_test.cc  quasistatic_sim_gradients_test.cc  solver_selector_test.cc  test_batch_simulator.cc  test_log_barrier_solver.cc  test_quasistatic_sim_gradients.cc  test_utilites.cc
scripts/: build_bindings.sh  build_test.sh  run_tests.sh
setup/: base.dockerfile  build_bindings.sh  copy_resources.sh  focal.dockerfile  install_eigen3.4.sh  qsim.dockerfile  requirements.txt  run_clang_tidy_checks.sh  run_tests.sh  toolchain.cmake
src/: batch_quasistatic_simulator.cc  qsim_cpp.cc  quasistatic_simulator.h  run_allegro_hand_A.cc  run_allegro_hand_jacobian.cc  socp_derivatives.h  test_log_barrier_solver.cc
traj_opt/: trajectory_optimization.py
(+142 files in other folders)
